--- a/client/buen-gusto/src/components/Navbar/Navbar.module.css
+++ b/client/buen-gusto/src/components/Navbar/Navbar.module.css
@@ -3,28 +3,49 @@
   right: 0;
   margin-right: 6em;
 }
-.dropdown{
+.dropdown {
   margin-right: 5em;
 }
 
 .dropdownMenu {
- margin-right: 20em;
+  margin-right: 20em;
 }
 
-.titulo{
-  position: absolute;
+.titulo {
+
   right: 0;
-  left:0;
+  left: 0;
   margin-top: 0.8em;
-  font-family: 'Great Vibes', cursive;
+  font-family: "Great Vibes", cursive;
   font-size: 2em;
-  color: rgb(156, 11, 11)
+  color: rgb(156, 11, 11);
 }
 
-.text{
+.text {
   color: white;
 }
 
-.background{
+.background {
   background-color: black;
+  height: auto;
 }
+
+.logo {
+  height: 2em;
+  width: 2em;
+  margin-right: 0.5em;
+}
+
+/* @media (max-width: 767px) {
+  .background {
+    height: 2.8em;
+  }
+  .titulo {
+    padding-bottom: 0.5em;
+    position: fixed;
+  }
+  .logo {
+    margin-top: -1em;
+  }
+}
+ */
