--- a/client/buen-gusto/src/components/Nosotros/Nosotros.module.css
+++ b/client/buen-gusto/src/components/Nosotros/Nosotros.module.css
@@ -27,7 +27,7 @@
 
 .container{
   padding: 2em;
-}
+background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(36,36,36,1) 50%, rgba(0,0,0,1) 100%);}
 
 @media (max-width: 767px) {
 .logo{
