--- a/client/buen-gusto/src/components/Nosotros/Nosotros.module.css
+++ b/client/buen-gusto/src/components/Nosotros/Nosotros.module.css
@@ -1,6 +1,7 @@
 
 .titulo{
   color: rgb(102, 52, 52);
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 .subTitulo {
   font-family: "Great Vibes", cursive;
@@ -8,6 +9,7 @@
   color: rgb(177, 0, 0);
   margin-top: 0.3em;
   margin-bottom: 0.6em;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 .buenGusto {
   font-family: "Great Vibes", cursive;
@@ -17,7 +19,8 @@
 
 .texto{
   font-size: 1.08em;
-  color: rgb(233, 233, 233);
+  color: rgb(102, 52, 52);
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 .logo {
   height: 0.9em;
@@ -27,7 +30,9 @@
 
 .container{
   padding: 2em;
-background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(36,36,36,1) 50%, rgba(0,0,0,1) 100%);}
+background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(36,36,36,1) 50%, rgba(0,0,0,1) 100%);
+height: 40em;
+}
 
 @media (max-width: 767px) {
 .logo{
