--- a/client/buen-gusto/src/components/Navbar/Navbar.module.css
+++ b/client/buen-gusto/src/components/Navbar/Navbar.module.css
@@ -25,7 +25,8 @@
 }
 
 .background {
-background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(36,36,36,1) 50%, rgba(0,0,0,1) 100%);  margin-top: -1.4em;
+background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(36,36,36,1) 50%, rgba(0,0,0,1) 100%);  
+margin-top: -1.4em;
 margin-bottom: -1.4em;
 }
 
