--- a/client/buen-gusto/src/components/ContactForm/ContactForm.module.css
+++ b/client/buen-gusto/src/components/ContactForm/ContactForm.module.css
@@ -2,6 +2,7 @@
     padding: 2em;
   background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(36,36,36,1) 50%, rgba(0,0,0,1) 100%);
   height: 40em;
+  z-index: 3;
 }
 
 .logo {
