--- a/client/buen-gusto/src/components/Valores/Valores.module.css
+++ b/client/buen-gusto/src/components/Valores/Valores.module.css
@@ -2,3 +2,18 @@
     padding: 2em;
     background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(36,36,36,1) 50%, rgba(0,0,0,1) 100%);
 }
+
+.card {
+    background-color: inherit;
+}
+
+.card:hover{
+    background-color: rgb(177, 0, 0,0.25);
+}
+
+.subTitulos{
+    color: rgb(177, 0, 0);
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    font-family: "Montserrat", sans-serif;
+    margin-top: 1em;
+}
