--- a/client/buen-gusto/src/components/Navbar/Navbar.module.css
+++ b/client/buen-gusto/src/components/Navbar/Navbar.module.css
@@ -13,10 +13,11 @@
 
 .titulo {
   margin-top: 0.8em;
-  margin-left: 7.5em;
+  margin-left: 5em;
   font-family: "Great Vibes", cursive;
   font-size: 2em;
   color: rgb(177, 0, 0);
+  text-decoration: none;
 }
 
 .text {
@@ -28,6 +29,14 @@
 background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(36,36,36,1) 50%, rgba(0,0,0,1) 100%);  
 margin-top: -1.4em;
 margin-bottom: -1.4em;
+}
+.backgroundCel {
+background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(36,36,36,1) 50%, rgba(0,0,0,1) 100%);  
+margin-top: -1.4em;
+margin-bottom: -1.4em;
+position: fixed;
+z-index: 200;
+width: 100%;
 }
 
 .logo {
