--- a/client/buen-gusto/src/components/Servicios/Servicios.module.css
+++ b/client/buen-gusto/src/components/Servicios/Servicios.module.css
@@ -15,6 +15,7 @@
   color: rgb(177, 0, 0);
   font-family: "Great Vibes", cursive;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  font-size: 1.7em;
 }
 
 .p {
