--- a/client/buen-gusto/src/components/Servicios/Servicios.module.css
+++ b/client/buen-gusto/src/components/Servicios/Servicios.module.css
@@ -17,6 +17,11 @@
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   font-size: 1.7em;
 }
+.nav{
+ flex-wrap: wrap;
+ justify-content: center;
+ margin-bottom: 1.2em;
+}
 
 .p {
   /* color: rgb(102, 52, 52); */
@@ -41,6 +46,7 @@
   margin-bottom: -2em;
   font-family: "Montserrat", sans-serif;
 }
+
 
 @media (max-width: 767px) {
   .separadores {
