--- a/client/buen-gusto/src/components/ContactForm/ContactForm.module.css
+++ b/client/buen-gusto/src/components/ContactForm/ContactForm.module.css
@@ -1,48 +1,51 @@
 .container {
-    /*padding: 2em;
+  /*padding: 2em;
     /*background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(36,36,36,1) 50%, rgba(0,0,0,1) 100%);*/
-    background-image: url("https://res.cloudinary.com/dp6ojzhsc/image/upload/c_crop,w_1080,h_450/v1704895711/El%20buen%20gusto/FB_IMG_1704895471809_tivisp.jpg") ;
-    z-index: 3;
+  background-image: url("https://res.cloudinary.com/dp6ojzhsc/image/upload/c_crop,w_1080,h_450/v1704895711/El%20buen%20gusto/FB_IMG_1704895471809_tivisp.jpg");
+  z-index: 3;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
 }
 
-.color{
+.color {
   background-color: rgba(36, 28, 28, 0.75);
   padding: 2em;
 }
 
 .logo {
-    height: 50px;
+  height: 50px;
 }
-.customButton{
-    background-color: rgb(177, 0, 0);
-    font-family: "Montserrat", sans-serif;
-
+.customButton {
+  background-color: rgb(177, 0, 0);
+  font-family: "Montserrat", sans-serif;
 }
 .titulo {
-    font-family: "Great Vibes", cursive;
-    font-size: 2em;
-    color: rgb(177, 0, 0);
+  font-family: "Great Vibes", cursive;
+  font-size: 2em;
+  color: rgb(177, 0, 0);
 }
 .inputborder {
-    border:0px solid black;
-    opacity: 0.75;
+  border: 0px solid black;
+  opacity: 0.75;
 }
 .inputborder:focus {
-    background-color:rgb(177, 0, 0);
-    outline: none;
-    color:beige;
+  background-color: rgb(177, 0, 0);
+  outline: none;
+  color: beige;
 }
 
-.option{
-    color: black;
+.option {
+  color: black;
 }
 .option:hover {
-    background-color: rgb(177, 0, 0);
+  background-color: rgb(177, 0, 0);
 }
 
 input,
 select,
 textarea,
-label, a {
-    font-family: "Montserrat", sans-serif;
+label,
+a {
+  font-family: "Montserrat", sans-serif;
 }
