--- a/client/buen-gusto/src/components/Servicios/Servicios.module.css
+++ b/client/buen-gusto/src/components/Servicios/Servicios.module.css
@@ -47,6 +47,18 @@
   font-family: "Montserrat", sans-serif;
 }
 
+.boton{
+  background-color: red;
+}
+.botonesNav{
+    background: linear-gradient(
+    90deg,
+    rgba(0, 0, 0, 0.822) 0%,
+    rgb(15, 15, 15) 40%,
+    rgba(0, 0, 0, 1) 100%
+  );
+}
+
 
 @media (max-width: 767px) {
   .separadores {
