--- a/client/buen-gusto/src/components/Valores/Valores.module.css
+++ b/client/buen-gusto/src/components/Valores/Valores.module.css
@@ -2,11 +2,21 @@
     padding: 2em;
     background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(36,36,36,1) 50%, rgba(0,0,0,1) 100%);
 }
+.containerCel {
+    padding: 2em;
+    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(36,36,36,1) 50%, rgba(0,0,0,1) 100%);
+}
 
 .card {
     background-color: inherit;
+    
 }
+@media (max-width: 768px) {
+    .card {
+        height: 350px !important;
 
+    }
+}
 .card:hover{
     background-color: rgb(177, 0, 0,0.25);
 }
