--- a/client/buen-gusto/src/components/Navbar/Navbar.module.css
+++ b/client/buen-gusto/src/components/Navbar/Navbar.module.css
@@ -18,6 +18,7 @@
   font-size: 2em;
   color: rgb(177, 0, 0);
   text-decoration: none;
+  animation: moverDesdeDerecha 2s forwards;
 }
 
 .text {
@@ -43,6 +44,7 @@ width: 100%;
   height: 2em;
   width: 2em;
   margin-right: 0.5em;
+  animation: moverDesdeArriba 2s forwards;
 }
 
 @media (max-width: 767px) {
@@ -86,4 +88,22 @@ width: 100%;
 .customDropdownItem:hover {
   /* Set the desired text color for the dropdown items on hover */
   background-color: rgb(177, 0, 0); /* Your desired hover color here */;
+}
+
+@keyframes moverDesdeDerecha {
+  from {
+    margin-right: -30em; /* Posición inicial fuera de la pantalla hacia la derecha */
+  }
+  to {
+    margin-right: 0; /* Posición final */
+  }
+}
+
+@keyframes moverDesdeArriba {
+  from {
+    margin-top: -8em; /* Posición inicial fuera de la pantalla hacia la derecha */
+  }
+  to {
+    margin-top: 0; /* Posición final */
+  }
 }
