--- a/client/buen-gusto/src/components/Servicios/Servicios.module.css
+++ b/client/buen-gusto/src/components/Servicios/Servicios.module.css
@@ -37,7 +37,7 @@
 }
 
 .botones {
-  margin-top: 1em;
+  margin-top: 0em;
   margin-bottom: -2em;
   font-family: "Montserrat", sans-serif;
 }
@@ -67,6 +67,13 @@
   font-family: "Great Vibes", cursive;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   font-size: 1.5em;
+}
+
+.img{
+  width: 310px;
+  margin-left: -15px;
+  border-radius: 30px;
+  margin-bottom: 10px;
 }
 
 @media (max-width: 767px) {
